--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="page">
         <header>
             <div class="logo">
-                <img src="/images/png-clipart-heineken-international-beer-lager-beer-label-trademark.png" alt="logo da heineken">
+                <img src="https://imgur.com/0Z9INo2" alt="logo da heineken">
             </div>
 
             <div class="perfil">
                 <div class="foto">
-                    <img class="fotoperfil" src="/images/291678890_1014816882424061_8719747641658986461_n.jpg" alt="foto perfil">
+                    <img class="fotoperfil" src="https://imgur.com/SQ2kjEF" alt="foto perfil">
                 </div>
         
                 <div class="info">
@@ -33,7 +33,7 @@
             <div class="button">
                 <a href="https://wa.me/5543991736522">
                     <button>
-                        <img src="/images/whatsapp.png" alt="whatsapp">
+                        <img src="https://imgur.com/FNG1Hxy" alt="whatsapp">
                     </button>        
                 </a>
             </div>
