--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="page">
         <header>
             <div class="logo">
-                <img src="https://imgur.com/0Z9INo2" alt="logo da heineken">
+                <img src="https://i.imgur.com/0Z9INo2.png" alt="logo da heineken">
             </div>
 
             <div class="perfil">
                 <div class="foto">
-                    <img class="fotoperfil" src="https://imgur.com/SQ2kjEF" alt="foto perfil">
+                    <img class="https://i.imgur.com/SQ2kjEF.jpeg" alt="foto perfil">
                 </div>
         
                 <div class="info">
@@ -33,7 +33,7 @@
             <div class="button">
                 <a href="https://wa.me/5543991736522">
                     <button>
-                        <img src="https://imgur.com/FNG1Hxy" alt="whatsapp">
+                        <img src="https://i.imgur.com/2rUVaXP.png" alt="whatsapp">
                     </button>        
                 </a>
             </div>
