--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="perfil">
                 <div class="foto">
-                    <img class="https://i.imgur.com/SQ2kjEF.jpeg" alt="foto perfil">
+                    <img class="https://i.imgur.com/qtbTibb.jpg" alt="foto perfil">
                 </div>
         
                 <div class="info">
