--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="perfil">
                 <div class="foto">
-                    <img class="https://scontent.fldb7-1.fna.fbcdn.net/v/t39.30808-6/289271326_1000350557204027_2711831911576762632_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=174925&_nc_ohc=QHc-Hh3syYkAX-Ifo7M&_nc_ht=scontent.fldb7-1.fna&oh=00_AfBDxnL5B-h35sI4qtPDMbFxGjkj4keYwmJcOs0ueYKOJg&oe=63BE4094" alt="foto perfil">
+                    <img class="https://i.imgur.com/5XlAG9g.jpg" alt="foto perfil">
                 </div>
         
                 <div class="info">
