--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="perfil">
                 <div class="foto">
-                    <img class="fotoperfil" src="https://i.imgur.com/5XlAG9g.jpg">
+                    <img class="fotoperfil" src="https://i.imgur.com/Ofnk6R9.png">
                 </div>
         
                 <div class="info">
