--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="perfil">
                 <div class="foto">
-                    <img class="fotoperfil" src="https://i.imgur.com/in7rRDn.png">
+                    <img class="fotoperfil" src="https://i.imgur.com/tH4YJ58.png">
                 </div>
         
                 <div class="info">
