--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
         
                 <div class="info">
-                    <h1>Welligton Valim</h1>
+                    <h1>Wellington Valim</h1>
                     <p>Vendedor Heineken</p>
                     <a href="https://www.instagram.com/wellington.valim.58/?hl=pt-br">@wellington.valim.58</a>
                 </div>
