--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <img class="item current-item" src="https://www.heinekenbrasil.com.br/media/tsjlwey2/lagunitas-1.webp" alt="lagunitas">
                         </a>
                         <a href="">
-                            <img class="item current-item" src="/images/13055581_1045266222196502_5340924366527118155_n.png" alt="https://i.imgur.com/NnUtoAG.png">
+                            <img class="item current-item" src="https://i.imgur.com/YeiwCU9.png" alt="skinka">
                         </a>                      
                     </div>
                 </div>
